--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SITE_NAME_HEADER=Digital Garden
-SITE_MAIN_LANGUAGE=en
+SITE_NAME_HEADER=Song's Riven
+SITE_MAIN_LANGUAGE=zh
 SITE_BASE_URL=https://ob.jiangyuesong.me
 SHOW_CREATED_TIMESTAMP=false
-TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+TIMESTAMP_FORMAT=yyyy-MM-dd HH:mm:ss
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
@@ -12,6 +12,8 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/chad-bennett/al-dente-obsidian-theme/HEAD/theme.css
+BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
